// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Day #render class variations when prop \`isCurrentMonth\` is \`true\` renders <Day /> 1`] = `
<button
  className="example-block-class-day is-current_month"
  onClick={[MockFunction]}
  onMouseEnter={[MockFunction]}
  type="button"
  value="2015-05-05"
>
  5
</button>
`;

exports[`Day #render class variations when prop \`isDisabled\` is \`true\` renders <Day /> 1`] = `
<button
  className="example-block-class-day is-disabled"
  onClick={[MockFunction]}
  onMouseEnter={[MockFunction]}
  type="button"
  value="2015-05-05"
>
  5
</button>
`;

exports[`Day #render class variations when prop \`isHighlighted\` is \`true\` renders <Day /> 1`] = `
<button
  className="example-block-class-day is-highlighted"
  onClick={[MockFunction]}
  onMouseEnter={[MockFunction]}
  type="button"
  value="2015-05-05"
>
  5
</button>
`;

exports[`Day #render class variations when prop \`isMonthNext\` is \`true\` renders <Day /> 1`] = `
<button
  className="example-block-class-day is-next_month"
  onClick={[MockFunction]}
  onMouseEnter={[MockFunction]}
  type="button"
  value="2015-05-05"
>
  5
</button>
`;

exports[`Day #render class variations when prop \`isMonthPrev\` is \`true\` renders <Day /> 1`] = `
<button
  className="example-block-class-day is-prev_month"
  onClick={[MockFunction]}
  onMouseEnter={[MockFunction]}
  type="button"
  value="2015-05-05"
>
  5
</button>
`;

exports[`Day #render class variations when prop \`isNonSelectable\` is \`true\` renders <Day /> 1`] = `
<button
  className="example-block-class-day is-not_selectable"
  onClick={[MockFunction]}
  onMouseEnter={[MockFunction]}
  type="button"
  value="2015-05-05"
>
  5
</button>
`;

exports[`Day #render class variations when prop \`isSelectable\` is \`true\` renders <Day /> 1`] = `
<button
  className="example-block-class-day is-selectable"
  onClick={[MockFunction]}
  onMouseEnter={[MockFunction]}
  type="button"
  value="2015-05-05"
>
  5
</button>
`;

exports[`Day #render class variations when prop \`isSelected\` is \`true\` renders <Day /> 1`] = `
<button
  className="example-block-class-day is-selected"
  onClick={[MockFunction]}
  onMouseEnter={[MockFunction]}
  type="button"
  value="2015-05-05"
>
  5
</button>
`;

exports[`Day #render class variations when prop \`isSelectionEnd\` is \`true\` renders <Day /> 1`] = `
<button
  className="example-block-class-day is-end_selection"
  onClick={[MockFunction]}
  onMouseEnter={[MockFunction]}
  type="button"
  value="2015-05-05"
>
  5
</button>
`;

exports[`Day #render class variations when prop \`isSelectionStart\` is \`true\` renders <Day /> 1`] = `
<button
  className="example-block-class-day is-start_selection"
  onClick={[MockFunction]}
  onMouseEnter={[MockFunction]}
  type="button"
  value="2015-05-05"
>
  5
</button>
`;

exports[`Day #render class variations when prop \`isToday\` is \`true\` renders <Day /> 1`] = `
<button
  className="example-block-class-day is-today"
  onClick={[MockFunction]}
  onMouseEnter={[MockFunction]}
  type="button"
  value="2015-05-05"
>
  5
</button>
`;

exports[`Day #render class variations when prop \`isWeekend\` is \`true\` renders <Day /> 1`] = `
<button
  className="example-block-class-day is-weekend"
  onClick={[MockFunction]}
  onMouseEnter={[MockFunction]}
  type="button"
  value="2015-05-05"
>
  5
</button>
`;

exports[`Day #render class variations when prop \`isWorkday\` is \`true\` renders <Day /> 1`] = `
<button
  className="example-block-class-day is-working_day"
  onClick={[MockFunction]}
  onMouseEnter={[MockFunction]}
  type="button"
  value="2015-05-05"
>
  5
</button>
`;

exports[`Day #render renders <Day /> 1`] = `
<button
  className="example-block-class-day"
  onClick={[MockFunction]}
  onMouseEnter={[MockFunction]}
  type="button"
  value="2015-05-05"
>
  5
</button>
`;
